[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["yakuhito <y@kuhi.to>"]
homepage = "https://github.com/Yakuhito/rcli"
repository = "https://github.com/Yakuhito/rcli"

[dependencies]
clvmr = "0.14.0"
chia = "0.26.0"
clvm-traits = "0.26.0"
chia-puzzle-types = "0.26.0"
chia-puzzles = "0.20.1"
hex = "0.4.3"
hex-literal = "0.4.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
chia-wallet-sdk = { git = "https://github.com/xch-dev/chia-wallet-sdk.git", rev="1199e568df1d8a77a824e166d674a1e913bef211", features=["offer-compression", "action-layer"] }
slot-machine = { git = "https://github.com/Yakuhito/slot-machine"}