[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["yakuhito <y@kuhi.to>"]
homepage = "https://github.com/Yakuhito/rcli"
repository = "https://github.com/Yakuhito/rcli"

[dependencies]
clvmr = "0.14.0"
chia = "0.26.0"
clvm-traits = "0.26.0"
chia-puzzle-types = "0.26.0"
chia-puzzles = "0.20.1"
hex = "0.4.3"
hex-literal = "0.4.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chia-wallet-sdk = { git = "https://github.com/xch-dev/chia-wallet-sdk.git", rev="010a5e932b6eeb2fc318d2d79492965bf4e26ef2", features=["offer-compression", "action-layer"] }
slot-machine = { git = "https://github.com/Yakuhito/slot-machine", rev="7d57e9653adce1cbba959a3d793793828a7770c5"}